--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+solr/data
+solr/test/data
+solr/development/data
+solr/default/data
+solr/pids
